--- a/front-end.html
+++ b/front-end.html
@@ -1,13 +1,23 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    
-  </head>
-  <body>
-      <div>
-        <p>Hello</p>
-      </div>
-    
-  </body>
 
-  
+<head>
+<title> Page Title </title>
+  <style> 
+    body {
+      background-color: hotpink;
+    }
+  </style>
+</head>
+
+<body style="text-align:center;">
+  <h1>Burn Book</h1>
+  <button> OPEN </button>
+</body>
 </html>
+
+<htm> 
+<head> 
+<Title> Page Title </title> 
+</head
+
