--- a/front-end.html
+++ b/front-end.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-<title> Page Title </title>
-  <style> 
-    body {
-      background-color: hotpink;
-    }
-  </style>
+    <title> Page Title </title>
+    <style> 
+        body {
+            background-color: hotpink;
+        }
+    </style>
 </head>
 
 <body style="text-align:center;">
-  <h1>Burn Book</h1>
-  <button> OPEN </button>
+    <h1>Burn Book</h1>
+    <div style="margin-top: 75%;">
+        <button> OPEN </button>
+    </div>
+  
 </body>
 </html>
-
-<htm> 
-<head> 
-<Title> Page Title </title> 
-</head
-
